--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,3 +1,7 @@
+html {
+  overflow-x: hidden;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 
     'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 
@@ -5,7 +9,10 @@ body {
   margin: 0;
   font-size: 20px;
   -webkit-font-smoothing: antialiased;
-  line-height: 1.3;  
+  line-height: 1.3;
+  overflow-x: hidden;
+  background: black;
+  color: white;
 }
 
 a {
